k8s/code/code-server-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      imagePullSecrets:
      - name: harbor-secrets
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: code-server
        image: harbor.bbg.pe/library/code-server:custom
        args: ["--auth", "password", "--port", "8080", "--host", "0.0.0.0", "/home/coder/project"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /home/coder
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: code-server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: code-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - code.bbg.pe
    secretName: code-server-tls
  rules:
  - host: code.bbg.pe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 80
